src/objects/IPM_CoreParameter_Strategic_help_content__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used in IPM core parameter Strategic help text</description>
    <fields>
        <fullName>IPM_BLGPartTwo__c</fullName>
        <description>hold second part of the BLG helps text</description>
        <label>IPM BLGPartTwo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_BLG__c</fullName>
        <description>Help text for IPM BLG</description>
        <inlineHelpText>Help text for IPM BLG</inlineHelpText>
        <label>IPM BLG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_InnovationPartTwo__c</fullName>
        <label>IPM InnovationPartTwo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Innovation__c</fullName>
        <description>Help text for Innovation</description>
        <inlineHelpText>Help text for Innovation</inlineHelpText>
        <label>IPM Innovation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Operational_Part_Two__c</fullName>
        <label>IPM Operational Part Two</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Operational__c</fullName>
        <label>IPM Operational</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_RenovationPartTwo__c</fullName>
        <description>hold send part of the renovation helps text</description>
        <label>IPM RenovationPartTwo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Renovation__c</fullName>
        <description>Help text for IPM Renovation</description>
        <inlineHelpText>Help text for IPM Renovation</inlineHelpText>
        <label>IPM Renovation</label>
        <type>TextArea</type>
    </fields>
    <label>IPM CoreParameter Strategic help content</label>
</CustomObject>